--- a/cli/package.json
+++ b/cli/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "type": "module",
   "author": "Sergio Avalos <sergio.avalos@gmail.com>",
@@ -27,6 +29,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/randomstring": "^1.1.8",
+    "prettier": "^2.5.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.3"
   }
 }
