--- a/cli/package.json
+++ b/cli/package.json
@@ -4,7 +4,7 @@
   "description": "CLI for creating and updating a Podcast Flow",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "watch": "tsc --watch",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -18,6 +18,7 @@
     "chalk": "^5.0.0",
     "commander": "^8.3.0",
     "conf": "^10.1.1",
+    "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "open": "^8.4.0",
@@ -29,10 +30,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/randomstring": "^1.1.8",
+    "@types/spotify-api": "^0.0.12",
+    "jest": "^27.4.5",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.4"
   }
 }
