--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -7,8 +7,12 @@
     "outDir": "./bin",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@App/*": ["src/*"],
+    }
   },
   "include": ["./src/"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/*.test.*"]
 }
