--- a/cli/package.json
+++ b/cli/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "open": "^8.4.0",
     "randomstring": "^1.2.1",
     "spotify-web-api-node": "^5.0.2"
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node-cron": "^3.0.0",
     "@types/randomstring": "^1.1.8",
     "@types/spotify-api": "^0.0.12",
     "jest": "^27.4.5",
