--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -8,10 +8,7 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "@App/*": ["src/*"],
-    }
+    "baseUrl": "."
   },
   "include": ["./src/"],
   "exclude": ["node_modules", "**/*.test.*"]
