Fixed main entry in package.json

--- a/cli/package.json
+++ b/cli/package.json
@@ -2,7 +2,7 @@
   "name": "podcast-flows-cli",
   "version": "0.0.1",
   "description": "CLI for creating and updating a Podcast Flow",
-  "main": "index.js",
+  "main": "./bin/index.js",
   "scripts": {
     "test": "jest",
     "build": "tsc",
