--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "dev": "ts-node-dev src/",
     "prestart": "npm run build",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "author": "Sergio Avalos <sergio.avalos@gmail.com>",
   "license": "MIT",
