--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
