--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,12 +1,15 @@
 {
+  "extends": "../../tsconfig.json",
+
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "./dist",
+    "declaration": true,
   },
   "lib": ["es2015"],
-  "exclude": ["node_modules", "**/*.test.*"]
+  "include": ["./src/"]
 }
