--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "podcast-flows-cli",
-  "version": "0.0.1",
-  "description": "CLI for creating and updating a Podcast Flow",
+  "name": "@podcast-flows/cli",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Web application for creating and updating a Podcast Flows",
+  "author": "Sergio Avalos <sergio.avalos@gmail.com>",
+  "homepage": "https://github.com/serchavalos/podcast-flows#readme",
+  "license": "ISC",
   "main": "./bin/index.js",
   "scripts": {
     "test": "jest",
@@ -11,8 +15,6 @@
     "lint": "tslint -p tsconfig.json"
   },
   "type": "module",
-  "author": "Sergio Avalos <sergio.avalos@gmail.com>",
-  "license": "MIT",
   "dependencies": {
     "@types/spotify-web-api-node": "^5.0.4",
     "chalk": "^5.0.0",
