--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "extends": "../../tsconfig.json",
+
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
@@ -10,6 +12,6 @@
     "moduleResolution": "node",
     "baseUrl": "."
   },
+
   "include": ["./src/"],
-  "exclude": ["node_modules", "**/*.test.*"]
 }
