--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,7 +10,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --single --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check-ts": "svelte-check --tsconfig ./tsconfig.json",
+    "check": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -33,6 +34,13 @@
   },
   "dependencies": {
     "@podcast-flows/api": "^0.0.0",
+    "@smui/button": "^6.0.0-beta.15",
+    "@smui/common": "^6.0.0-beta.15",
+    "@smui/drawer": "^6.0.0-beta.15",
+    "@smui/icon-button": "^6.0.0-beta.15",
+    "@smui/list": "^6.0.0-beta.15",
+    "@smui/top-app-bar": "^6.0.0-beta.15",
+    "buffer": "^6.0.3",
     "sirv-cli": "^2.0.0",
     "spotify-web-api-js": "^1.5.2",
     "svelte-routing": "^1.6.0"
