--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -33,14 +33,24 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@material/typography": "^13.0.0",
+    "@mdi/js": "^6.5.95",
     "@podcast-flows/api": "^0.0.0",
     "@smui/button": "^6.0.0-beta.15",
+    "@smui/checkbox": "^6.0.0-beta.15",
+    "@smui/chips": "^6.0.0-beta.15",
+    "@smui/circular-progress": "^6.0.0-beta.15",
     "@smui/common": "^6.0.0-beta.15",
     "@smui/drawer": "^6.0.0-beta.15",
+    "@smui/fab": "^6.0.0-beta.15",
+    "@smui/form-field": "^6.0.0-beta.15",
     "@smui/icon-button": "^6.0.0-beta.15",
     "@smui/list": "^6.0.0-beta.15",
+    "@smui/select": "^6.0.0-beta.15",
+    "@smui/textfield": "^6.0.0-beta.15",
     "@smui/top-app-bar": "^6.0.0-beta.15",
     "buffer": "^6.0.3",
+    "lodash.debounce": "^4.0.8",
     "sirv-cli": "^2.0.0",
     "spotify-web-api-js": "^1.5.2",
     "svelte-routing": "^1.6.0"
