frontend: Finished with create podcast flow form

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -47,6 +47,7 @@
     "@smui/icon-button": "^6.0.0-beta.15",
     "@smui/list": "^6.0.0-beta.15",
     "@smui/select": "^6.0.0-beta.15",
+    "@smui/snackbar": "^6.0.0-beta.15",
     "@smui/textfield": "^6.0.0-beta.15",
     "@smui/top-app-bar": "^6.0.0-beta.15",
     "@types/lodash.debounce": "^4.0.6",
