--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -41,6 +41,7 @@
     "@smui/chips": "^6.0.0-beta.15",
     "@smui/circular-progress": "^6.0.0-beta.15",
     "@smui/common": "^6.0.0-beta.15",
+    "@smui/dialog": "^6.0.0-beta.15",
     "@smui/drawer": "^6.0.0-beta.15",
     "@smui/fab": "^6.0.0-beta.15",
     "@smui/form-field": "^6.0.0-beta.15",
