api: Add new script for renewing all flows

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,7 +15,8 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "renew-podcasts": "ts-node-dev scripts/renew-podcast-flows.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
