--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,6 +37,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/pg": "^8.6.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -44,6 +45,7 @@
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-node-fs": "^4.4.0",
     "passport-spotify": "^2.0.0",
+    "pg": "^8.7.3",
     "pupeteer": "^0.0.1",
     "spotify-web-api-node": "^5.0.2",
     "sqlite3": "^4.2.0"
