--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,7 +15,7 @@
     "start": "node dist/index.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "renew-podcasts": "ts-node-dev scripts/renew-podcast-flows.ts"
+    "renew-podcasts": "node dist/scripts/renew-podcast-flows.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
