--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "devDependencies": {
     "lerna": "^4.0.0"
   },
+  "engines": {
+    "node": "14.17.5",
+    "npm": "8.4.1",
+    "yarn": "1.22.17"
+  },
   "scripts": {
     "heroku-postbuild": "./scripts/heroku.build.sh"
   }
